<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Lost_fondActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/i8_findpassword_head_background">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc"
            app:srcCompat="?attr/homeAsUpIndicator"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_xinxi"
            android:textColor="#fff"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@android:drawable/checkbox_on_background"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:text="姓名："
                android:textColor="@color/bg_black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/lf_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="qaz"
                android:textColor="@color/bg_black"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:text="学号："
                android:textColor="@color/bg_black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/lf_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="qaz"
                android:textColor="@color/bg_black"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:text="学院："
                android:textColor="@color/bg_black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/lf_collage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="qaz"
                android:textColor="@color/bg_black"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/title"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/et_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/telephone"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/content"
        android:minLines="15"
        android:gravity="top"
        android:textSize="15sp"/>
</LinearLayout>